--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 </head>
 <body data-target="#navbar-main">
+
 <div id="navbar-main"> 
   <!-- Fixed navbar -->
   <div class="navbar navbar-inverse navbar-fixed-top">
@@ -33,11 +34,10 @@
         </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav pull-right">
-          <li><a href="#home">Início</a></li>
-        <li><a href="#about">Sobre</a></li>
-        <li><a href="#portfolio">Roupas</a></li>
-        <li><a href="#team">Equipe</a></li>
-        <li><a href="#contact">Contato</a></li>
+          <li><a href="index.html">Início</a></li>
+        <li><a href="meus-produtos.html">Roupas</a></li>
+        <li><a href="sobre-nos.html"> Sobre nós</a></li>
+        <li><a href="contato.html">Contato</a></li>
         </ul>
       </div>
       <!--/.nav-collapse --> 
@@ -67,22 +67,22 @@
 <div id="services"  style="Color: palevioletred" name="services">
   <div class="container" style="Color: palevioletred">
     <div class="row">
-      <h2 class="centered " style="Color: palevioletred">WHAT WE OFFER</h2>
+      <h2 class="centered " style="Color: palevioletred">O que temos a oferecer</h2>
       <hr>
       <div class="col-lg-8 col-lg-offset-2">
         <p class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-cubes fa-3x"></i>
-        <h3>COFFEE</h3>
-        <p>Erat imperdiet dissentias ea usu, alia aliquid corrumpit ea qui. Eu vim oratio conclusionemque, vel at errem nominavi delicatissimi.</p>
+        <h3>Conbinação </h3>
+        <p>Temos pessoas 24 horas do dia criando looks incriveis para você. </p>
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-flask fa-3x"></i>
-        <h3>TEA</h3>
-        <p>Erat imperdiet dissentias ea usu, alia aliquid corrumpit ea qui. Eu vim oratio conclusionemque, vel at errem nominavi delicatissimi.</p>
+        <h3>Qualidade  </h3>
+        <p>Temos uma qualidade incrivel em nossas roupas, usamos os melhores tecidos do mercado.</p>
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-life-ring fa-3x"></i>
-        <h3>CAKES</h3>
-        <p>Erat imperdiet dissentias ea usu, alia aliquid corrumpit ea qui. Eu vim oratio conclusionemque, vel at errem nominavi delicatissimi.</p>
+        <h3>Design</h3>
+        <p>Temos um design moderno é impactante.</p>
       </div>
     </div>
     <!-- row --> 
@@ -93,12 +93,11 @@
         <div class="container"  >
             <div class="highlight tb"  >
                 <div class="tb-cell" >
-                    <p>Erat imperdiet dissentias ea usu, alia aliquid corrumpit ea qui!</br>
-					erant bonorum albucius et per, ei sapientem accommodare est. Saepe dolorum constituam ei!!</p>
+                    <p>Fazemos encomendas  e criação de roupas. Tem alguma roupa que você queira fazer?  </p>
                 </div>
                 <div class="links tb-cell">
                     <div class="reservation-link" >
-                        <a href="#" class="btn reservation-btn" >RESERVATION</a> 
+                        <a href="#" class="btn reservation-btn" >Entre em contato.</a> 
                     </div> 
                 </div>
             </div>
@@ -140,7 +139,7 @@
       <hr>
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="he-wrap tpl6">
-          <img src="assets/img/portfolio/portfolio_01.jpg" alt="Roupas Femininas">
+          <img src="/vestido.png"  style="width: 80%;" alt="Roupas Femininas">
           <div class="he-view">
             <div class="bg a0" data-animate="fadeIn">
               <h3 class="a1" data-animate="fadeInDown">Vestidos</h3>
@@ -155,7 +154,7 @@
       <!-- col-4 -->
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="he-wrap tpl6">
-          <img src="assets/img/portfolio/portfolio_02.jpg" alt="Roupas Femininas">
+          <img src="/blusaVermelha.png" style="width: 80%;" alt="Roupas Femininas">
           <div class="he-view">
             <div class="bg a0" data-animate="fadeIn">
               <h3 class="a1" data-animate="fadeInDown">Blusas</h3>
@@ -170,10 +169,10 @@
       <!-- col-4 -->
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="he-wrap tpl6">
-          <img src="assets/img/portfolio/portfolio_03.jpg" alt="Roupas Femininas">
+          <img src="/saiaPreta.png"  style="width: 80%;" alt="Roupas Femininas">
           <div class="he-view">
             <div class="bg a0" data-animate="fadeIn">
-              <h3 class="a1" data-animate="fadeInDown">Calças</h3>
+              <h3 class="a1" data-animate="fadeInDown">Saias</h3>
               <a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-plus"></i></a> </div>
           </div>
           <!-- he view --> 
@@ -200,36 +199,7 @@
 <!-- /container --> 
 
 <!-- ==== TEAM MEMBERS ==== -->
-<div id="team" name="team">
-  <div class="container">
-    <div class="row centered">
-      <h2 class="centered">Meet Our Chef</h2>
-      <hr>
-	   <div class="col-lg-8 col-lg-offset-2 centered">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-		<br/>
-      </div>
-      <div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team01.jpg" height="120px" width="120px" alt="">
-        <h4><strong>Rennyl</strong></h4>
-        <p>Consectetuer eu nam. Saepe legendos vulputate eu quo, id mea comprehensam signifer.</p>
-        <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-linkedin"></i></a> </div>
-      <div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team02.jpg" height="120px" width="120px" alt="">
-        <h4><b>Kristean</b></h4>
-        <p>Consectetuer eu nam. Saepe legendos vulputate eu quo, id mea comprehensam signifer.</p>
-        <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-linkedin"></i></a> </div>
-      <div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team03.jpg" height="120px" width="120px" alt="">
-        <h4><b>Angilica</b></h4>
-        <p>Consectetuer eu nam. Saepe legendos vulputate eu quo, id mea comprehensam signifer.</p>
-        <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-linkedin"></i></a> </div>
-      <div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team04.jpg" height="120px" width="120px" alt="">
-        <h4><b>Shannon</b></h4>
-        <p>Consectetuer eu nam. Saepe legendos vulputate eu quo, id mea comprehensam signifer.</p>
-        <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-linkedin"></i></a> </div>
-     
-    </div>
-  </div>
-  <!-- row --> 
-</div>
+
 <!-- container --> 
 
 <!-- container -->
