--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="webthemez">
-  <title>Loja de Roupas Femininas</title>
+  <title>Luiza Modas </title>
 
 <!-- Bootstrap core CSS -->
 <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -34,7 +34,7 @@
         </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav pull-right">
-          <li><a href="index.html">Início</a></li>
+          <li><a href="index.html" style="color:palevioletred" >Início</a></li>
         <li><a href="meus-produtos.html">Roupas</a></li>
         <li><a href="sobre-nos.html"> Sobre nós</a></li>
         <li><a href="contato.html">Contato</a></li>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="links tb-cell">
                     <div class="reservation-link" >
-                        <a href="#" class="btn reservation-btn" >Entre em contato.</a> 
+                        <a href="https://api.whatsapp.com/send/?phone=5561995987136&text&type=phone_number&app_absent=0" class="btn reservation-btn" >Entre em contato.</a> 
                     </div> 
                 </div>
             </div>
@@ -139,11 +139,11 @@
       <hr>
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="he-wrap tpl6">
-          <img src="/vestido.png"  style="width: 80%;" alt="Roupas Femininas">
+          <img src="./assets/img/vestido.png"  style="width: 80%;" alt="Roupas Femininas">
           <div class="he-view">
             <div class="bg a0" data-animate="fadeIn">
-              <h3 class="a1" data-animate="fadeInDown">Vestidos</h3>
-              <a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-plus"></i></a> </div>
+              <h3 class="a1" data-animate="fadeInDown"></h3>
+              <a href="#" class="dmbutton a2" data-animate="fadeInUp"></a> </div>
           </div>
           <!-- he view --> 
         </div>
@@ -154,11 +154,11 @@
       <!-- col-4 -->
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="he-wrap tpl6">
-          <img src="/blusaVermelha.png" style="width: 80%;" alt="Roupas Femininas">
+          <img src="./assets/img/blusaVermelha.png" style="width: 80%;" alt="Roupas Femininas">
           <div class="he-view">
             <div class="bg a0" data-animate="fadeIn">
-              <h3 class="a1" data-animate="fadeInDown">Blusas</h3>
-              <a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-plus"></i></a> </div>
+              <h3 class="a1" data-animate="fadeInDown"></h3>
+              <a href="#" class="dmbutton a2" data-animate="fadeInUp"></i></a> </div>
           </div>
           <!-- he view --> 
         </div>
@@ -169,11 +169,11 @@
       <!-- col-4 -->
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="he-wrap tpl6">
-          <img src="/saiaPreta.png"  style="width: 80%;" alt="Roupas Femininas">
+          <img src="./assets/img/saiaPreta.png"  style="width: 80%;" alt="Roupas Femininas">
           <div class="he-view">
             <div class="bg a0" data-animate="fadeIn">
-              <h3 class="a1" data-animate="fadeInDown">Saias</h3>
-              <a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-plus"></i></a> </div>
+              <h3 class="a1" data-animate="fadeInDown"></h3>
+              <a href="#" class="dmbutton a2" data-animate="fadeInUp"></i></a> </div>
           </div>
           <!-- he view --> 
         </div>
@@ -204,20 +204,22 @@
 
 <!-- container -->
 
-<div id="footerwrap"  style="background-color: palevioletred">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <ul class="list-inline social-buttons">
-          <li><a href="#"><i class="fa fa-twitter"></i></a> </li>
-          <li><a href="#"><i class="fa fa-facebook"></i></a> </li>
-          <li><a href="#"><i class="fa fa-google-plus"></i></a> </li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a> </li>
-        </ul>
+<div style="height: -10vh; display: flex; flex-direction: column;">
+  <!-- Conteúdo principal da página -->
+
+  <div id="footerwrap" style="background-color: palevioletred; flex-shrink: 0;">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <ul class="list-inline social-buttons">
+            <!-- Conteúdo do rodapé -->
+          </ul>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
 
 <!-- Bootstrap core JavaScript
     ================================================== --> 
