--- a/meus-produtos.html
+++ b/meus-produtos.html
@@ -24,7 +24,7 @@
      
         <div class="navbar-header">
        <div class="pull-left logo">
-          <a class="" href="#home"><h1 style="color:palevioletred">Luiza Modas</h1></a>
+          <a class="" href="index.html"><h1 style="color:palevioletred">Luiza Modas</h1></a>
          </div>
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
           </div>
